docs/api/qiskit/0.24/qiskit.transpiler.passes.CommutationAnalysis.mdx
---
title: CommutationAnalysis
description: API reference for qiskit.transpiler.passes.CommutationAnalysis
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CommutationAnalysis
---

<span id="qiskit-transpiler-passes-commutationanalysis" />

# qiskit.transpiler.passes.CommutationAnalysis

<Class id="qiskit.transpiler.passes.CommutationAnalysis" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/optimization/commutation_analysis.py" signature="CommutationAnalysis(*args, **kwargs)">
  Analysis pass to find commutation relations between DAG nodes.

  Property\_set\[‘commutation\_set’] is a dictionary that describes the commutation relations on a given wire, all the gates on a wire are grouped into a set of gates that commute.

  TODO: the current pass determines commutativity through matrix multiplication. A rule-based analysis would be potentially faster, but more limited.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.CommutationAnalysis.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                |                                          |
  | ------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.CommutationAnalysis.__init__ "qiskit.transpiler.passes.CommutationAnalysis.__init__")() | Initialize self.                         |
  | [`name`](#qiskit.transpiler.passes.CommutationAnalysis.name "qiskit.transpiler.passes.CommutationAnalysis.name")()             | Return the name of the pass.             |
  | [`run`](#qiskit.transpiler.passes.CommutationAnalysis.run "qiskit.transpiler.passes.CommutationAnalysis.run")(dag)             | Run the CommutationAnalysis pass on dag. |

  ## Attributes

  |                                                                                                                                                                        |                                             |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.CommutationAnalysis.is_analysis_pass "qiskit.transpiler.passes.CommutationAnalysis.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.CommutationAnalysis.is_transformation_pass "qiskit.transpiler.passes.CommutationAnalysis.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.CommutationAnalysis.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.CommutationAnalysis.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.CommutationAnalysis.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.CommutationAnalysis.run" name="run" signature="run(dag)">
    Run the CommutationAnalysis pass on dag.

    Run the pass on the DAG, and write the discovered commutation relations into the property\_set.
  </Function>
</Class>

